# igh-airflow

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.mimic-prod.yml  docker-compose.production.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-prod.yml  deploy-test.yml  qa.yml
config/: __init__.py  settings.py
dags/: __init__.py  igh_assets.py  igh_deployment_dag.py  igh_ingestion_dag.py  igh_transform_dag.py  placeholder_dag.py
docker/: Dockerfile  entrypoint.sh
docs/: UPDATING_PRODUCTION_DATA.md
plugins/: __init__.py  igh_download_plugin.py
self-hosted/: .env.example  README.md  docker-compose.yml
tests/: __init__.py  conftest.py  test_assets.py  test_deployment_dag.py  test_download_plugin.py  test_ingestion_dag.py  test_settings.py  test_slack_alerts.py  test_transform_dag.py
utils/: __init__.py  slack_alerts.py
