[project]
name = "igh-airflow"
version = "0.1.0"
description = "Apache Airflow orchestration for the IGH Data Pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow>=2.8.0",
    "apache-airflow-providers-slack>=8.0.0",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dags", "config", "utils"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
